Bug 156959 - Base: Icons on the left hand side show pin item
Summary: Base: Icons on the left hand side show pin item
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: implementationError
: 157335 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-08-28 10:54 UTC by Andreas Heinisch
Modified: 2023-09-19 16:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Image of the database pane (10.95 KB, image/png)
2023-08-28 10:54 UTC, Andreas Heinisch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2023-08-28 10:54:35 UTC
Description:
After the introduction of pinned items, Base shows the pinned item after hovering a the icons in the left pane. See attached image.

Steps to Reproduce:
1. Open Base
2. Hover the items in the Database pane

Actual Results:
There is a pin item in the Database pane

Expected Results:
There should be no pin item.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b3b926e32d81ff3bd6e065b986221382530c79a5
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-AU (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Andreas Heinisch 2023-08-28 10:54:57 UTC
Created attachment 189191 [details]
Image of the database pane
Comment 2 stragu 2023-08-28 21:29:31 UTC
Confirmed in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e7496f41562b75ea9732ca48f9aa0c07b69e424f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 stragu 2023-08-28 21:34:45 UTC
For good measure, I can confirm that it started with 436f3f8eb5b45620842351a1f29ba49571043515 using the linux-64-7.6 bibisect repo.
Comment 4 Commit Notification 2023-09-06 20:06:19 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a37652b79001bf5208841b9221dee851b9b6d0f

tdf#156959 - Remove pinned icons from thumbnail view item

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-12 04:01:22 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/aeaa6c301a055ce915cab31083f26e43a20086f1

tdf#156959 - Remove pinned icons from thumbnail view item

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-09-13 01:01:13 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cea165a3ebdb5f2a2b172004ff1b3848f303d78a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you!
Comment 7 Andreas Heinisch 2023-09-19 16:31:04 UTC
*** Bug 157335 has been marked as a duplicate of this bug. ***