include/sfx2/thumbnailviewitem.hxx
@@ -72,15 +72,10 @@ public:
     bool mbBorder;
     bool mbSelected;
     bool mbHover;
-    bool mbPinned;
     BitmapEx maPreview1;
     OUString maTitle;
     OUString maHelpText;
     css::uno::Reference< css::accessibility::XAccessible > mxAcc;
-
-    bool mbPinnedDocumentHighlighted;
-    BitmapEx maPinnedDocumentBitmap;
-    BitmapEx maPinnedDocumentBitmapHiglighted;
 
     ThumbnailViewItem(ThumbnailView& rView, sal_uInt16 nId);
 
@@ -97,10 +92,6 @@ public:
     bool isHighlighted () const { return mbHover; }
 
     void setHighlight (bool state);
-
-    bool isPinned () const { return mbPinned; }
-
-    void setPinned (bool state);
 
     /** Updates own highlight status based on the aPoint position.
 
