sfx2/source/control/recentdocsviewitem.hxx
@@ -43,16 +43,18 @@ public:
     /// Called when the user clicks a document - it will open it.
     void OpenDocument();
 
+    bool isPinned () const { return m_bPinned; }
+
 private:
     sfx2::RecentDocsView& mrParentView;
 
     /// Return area where is the icon to remove document from the recent documents.
     tools::Rectangle getRemoveIconArea() const;
+    tools::Rectangle getPinnedIconArea() const;
 
     OUString maURL;
 
     bool m_isReadOnly = false;
-    bool m_isPinned = false;
 
     OUString m_sHelpText;
 
@@ -62,6 +64,11 @@ private:
     BitmapEx m_aRemoveRecentBitmap;
 
     BitmapEx m_aRemoveRecentBitmapHighlighted;
+
+    bool m_bPinned;
+    bool m_bPinnedIconHighlighted;
+    BitmapEx m_aPinnedDocumentBitmap;
+    BitmapEx m_aPinnedDocumentBitmapHiglighted;
 };
 
 #endif // INCLUDED_SFX2_RECENTDOCSVIEWITEM_HXX
